--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <div class="container">
         <h2 class="heading">SkyCast</h2>
         
-        <form>
+        <div class="searchBar">
             <input type="text" placeholder="Enter city name" class="enterCity">
             <button class="search-btn"><img src="./search.png" alt="search-icon"></button>
-        </form>
+        </div>
 
         <div class="info">
             <div class="currWeather-card">
