--- a/index.html
+++ b/index.html
@@ -20,22 +20,22 @@
             <div class="currWeather-card">
                 <div class="temp">
                     <img src="./sun.png" alt="weather-icon" class="weather-icon">
-                    <p class="currTemp">18C</p>
-            </div>
-
-                <div>
-                    <p class="currCity">Durgapur, West Bengal, India</p>
+                    <p class="currTemp">-</p>
                 </div>
 
-            <div class="tempDetails">
+                <div>
+                    <p class="currCity">-</p>
+                </div>
+
+                <div class="tempDetails">
                     <div class="windSpeed">
                         <h5>Wind Speed</h5>
-                        <p class="currSpeed">26.9km/h</p>
+                        <p class="currSpeed">-</p>
                     </div>
 
                     <div class="humidity">
                         <h5>Humidity</h5>
-                        <p class="currHumid">73.3gm/m^3</p>
+                        <p class="currHumid">-</p>
                     </div>
                 </div>
             </div>
@@ -43,39 +43,45 @@
             <div class="nxtWeatherCards">
 
                 <div>
-                    <p class="day2"><u>Monday</u></p>
+                    <p class="day"><u>Monday</u></p>
                     <img src="./sun.png" alt="weather-icon" class="day2-icon">
-                    <p class="day2Temp">19C</p>
+                    <p class="dayTemp">19C</p>
+                    <p class = "description">-</p>
                 </div>
 
                 <div>
-                    <p class="day3"><u>Monday</u></p>
+                    <p class="day"><u>Monday</u></p>
                     <img src="./sun.png" alt="weather-icon" class="day3-icon">
-                    <p class="day3Temp">19C</p>
+                    <p class="dayTemp">19C</p>
+                    <p class = "description">-</p>
                 </div>
 
                 <div>
-                    <p class="day4"><u>Monday</u></p>
+                    <p class="day"><u>Monday</u></p>
                     <img src="./sun.png" alt="weather-icon" class="day4-icon">
-                    <p class="day4Temp">19C</p>
+                    <p class="dayTemp">19C</p>
+                    <p class = "description">-</p>
                 </div>
 
                 <div>
-                    <p class="day5"><u>Monday</u></p>
+                    <p class="day"><u>Monday</u></p>
                     <img src="./sun.png" alt="weather-icon" class="day5-icon">
-                    <p class="day5Temp">19C</p>
+                    <p class="dayTemp">19C</p>
+                    <p class = "description">-</p>
                 </div>
 
                 <div>
-                    <p class="day6"><u>Monday</u></p>
+                    <p class="day"><u>Monday</u></p>
                     <img src="./sun.png" alt="weather-icon" class="day6-icon">
-                    <p class="day6Temp">19C</p>
+                    <p class="dayTemp">19C</p>
+                    <p class = "description">-</p>
                 </div>
 
                 <div>
-                    <p class="day7"><u>Monday</u></p>
+                    <p class="day"><u>Monday</u></p>
                     <img src="./sun.png" alt="weather-icon" class="day7-icon">
-                    <p class="day7Temp">19C</p>
+                    <p class="dayTemp">19C</p>
+                    <p class = "description">-</p>
                 </div>
 
 
