--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 </head>
 <body>
     <div class="container">
-        <h2 class="heading">SkyCast</h2>
-        
+        <div class = "top">
+            <h2 class="heading">SkyCast</h2>  
+            <button id="mode">❄️</button> 
+        </div>  
         <div class="searchBar">
             <input type="text" placeholder="Enter city name" class="enterCity">
             <button class="search-btn"><img src="./search.png" alt="search-icon"></button>
